feat: Add task on calendar
Implemented as part of 2a5f914b-171f-4ccc-a5c0-11f959f3900a
